Add detailed notes to the ReadME, remove apiToken so that it is not exposed.

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-OPENAI_API_KEY=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
-HUGGINGFACEHUB_API_TOKEN=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
+OPENAI_API_KEY=
